--- a/app/views/orders/search.html.erb
+++ b/app/views/orders/search.html.erb
@@ -1,2 +1,11 @@
-<h1>Orders#search</h1>
-<p>Find me in app/views/orders/search.html.erb</p>
+<h1>Find An Order</h1>
+
+<%= form_tag("/orders/results", :method => "get") do %>
+  <%= label_tag(:name, "Name:") %>
+  <%= text_field_tag(:name) %><br>
+  <%= label_tag(:bunk, "Bunk:") %>
+  <%= text_field_tag(:bunk) %><br>
+  <%= submit_tag("Search") %>
+<% end %>
+
+<%= link_to 'Back', orders_path %>
