--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -16,18 +16,20 @@
 </p>
 
 <p>
-  <b>Blue:</b>
-  <%= @order.blue %>
-</p>
-
-<p>
   <b>Orange:</b>
   <%= @order.orange %>
 </p>
 
 <p>
+  <b>Blue:</b>
+  <%= @order.blue %>
+</p>
+<p>
   <b>Paid:</b>
-  <%= @order.paid %>
+  <%= if @order.paid
+    "$#{(@order.white + @order.blue + @order.orange)*8}"
+    else
+    "None" end%>
 </p>
 
 
