--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -2,10 +2,10 @@
 <%= render 'shared/error_messages' %>
 	
 	<%= f.label :name, "Name:" %>
-	<%= f.text_field :name %><br />
+	<%= f.text_field :name, {placeholder: ''}%><br />
 
 	<%= f.label :bunk, "Bunk:" %>
-	<%= f.text_field :bunk %><br />
+	<%= f.text_field :bunk, {placeholder: ''} %><br />
 
 	<%= f.label :discs do %>
 	<%= f.label :white, "White:" %>
