--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -4,33 +4,7 @@
 
 
 <p>10 Most Recent Orders<p>
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Bunk</th>
-    <th>White</th>
-    <th>Orange</th>
-    <th>Blue</th>
-    <th>Paid</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
 
-<% @orders.reverse[0...10].each do |order| %>
-  <tr>
-    <td><%= order.name %></td>
-    <td><%= order.bunk %></td>
-    <td><%= order.white %></td>
-    <td><%= order.orange %></td>
-    <td><%= order.blue %></td>
-    <td><%= order.paid %></td>
-    <td><%= link_to 'Edit', edit_order_path(order) %></td>
-    <td><%= link_to 'Delete', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
+<%= render 'display' %>
 
 <%= button_to 'New Order', new_order_path, :class => "button", :method => :get %>
