--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,8 @@
           <%= link_to "disc orders", root_path, id: "logo" %>
           <nav>
             <ul class="nav pull-right">
-              <li><%= link_to "Orders", root_path %></li>
+              <li><%= link_to "All Orders", all_path %></li>
+              <li><%= link_to "Submit Orders", root_path %></li>
               <li><%= link_to "Search", search_path %></li>
             </ul>
           </nav>
