--- a/app/assets/stylesheets/orders.css.scss
+++ b/app/assets/stylesheets/orders.css.scss
@@ -57,8 +57,9 @@ p, tr.show {
 }
 
 
-td.show_bold{
+td.show_bold, label.show_bold{
   width: 120;
+  font-size: x-large;
   font-weight: bold;
 }
 
