--- a/app/assets/stylesheets/orders.css.scss
+++ b/app/assets/stylesheets/orders.css.scss
@@ -124,11 +124,11 @@ background-color: #dff0d8;
   color: #468847;
 }
 
-span#notpaid, td.notpaid {
+span#notpaid, td#notpaid {
   color: #b94a48
 }
 
-span#paid, td.paid {
+span#paid, td#paid {
 	color: #468847
 }
 
