preserve params on redirect for receive

--- a/app/views/orders/_display.html.erb
+++ b/app/views/orders/_display.html.erb
@@ -25,7 +25,8 @@
     else
     "Not Paid ($#{order.price})" end%></td>
     <%received_word = order.received ?  "Yes" : 'No'%>
-    <td><%= link_to received_word, order_path(order, :order => { :received => !order.received}),:method => :put %></td>
+    <%old_params = params || {}%>
+    <td><%= link_to received_word, order_path(order, :order => { :received => !order.received}, :old_params => old_params), :method => :put%></td>
     <td><%= link_to 'View', order %></td>
     <td><%= link_to 'Edit', edit_order_path(order) %></td>
     <td><%= link_to 'Delete', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
