--- a/app/assets/stylesheets/orders.css.scss
+++ b/app/assets/stylesheets/orders.css.scss
@@ -165,3 +165,8 @@ input[type='text'], input[type='number'], input[type='checkbox'], label{
 	height: 30;
 	display: inline;
 }
+
+input#needy, label#needy {
+  vertical-align: middle;
+  margin:0
+}
