--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -46,7 +46,8 @@
       else
         "Not Received" end%>
   </span>
-  <%= link_to "change", order_path(@order, :order => { :received => !@order.received}), :method => :put %>
+  <%old_params = params || {}%>
+  <%= link_to "change", order_path(@order, :order => { :received => !@order.received}, :old_params => old_params), :method => :put%>
 </td>
 </tr>
 </table>
