--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -10,18 +10,18 @@
 	<tr><td class = 'show_bold'><%= f.label :discs do %></td>
 	<tr><td class = 'show_bold'><%= f.label :white, "White:", class: 'show_bold'%></td>
 	<% @order.white ||= 0 %></td>
-	<td class = 'show'><%=f.number_field :white, {value: @order.white, min: 0, step: 1} %></td></tr>
+	<td class = 'show' id = "white_num"><%=f.number_field :white, {value: @order.white, min: 0, step: 1, class: 'count-me'} %></td></tr>
 
-	<tr><td class = 'show_bold'><%= f.label :orange, "Orange:", class: 'show_bold'%></td>
+	<tr><td class = 'show_bold' id = "orange_num"><%= f.label :orange, "Orange:", class: 'show_bold'%></td>
 	<% @order.orange ||= 0 %></td>
-	<td class = 'show'><%=f.number_field :orange, {value: @order.orange, min: 0, step: 1} %></td></tr>
+	<td class = 'show'><%=f.number_field :orange, {value: @order.orange, min: 0, step: 1, class: 'count-me'} %></td></tr>
 
-	<tr><td class = 'show_bold'><%= f.label :blue, "Blue:", class: 'show_bold'%></td>
+	<tr><td class = 'show_bold' id = "blue_num"><%= f.label :blue, "Blue:", class: 'show_bold'%></td>
 	<% @order.blue ||= 0 %></td>
-	<td class = 'show'><%=f.number_field :blue, {value: @order.blue, min: 0, step: 1} %></td></tr>
+	<td class = 'show'><%=f.number_field :blue, {value: @order.blue, min: 0, step: 1, class: 'count-me'} %></td></tr>
 	<% end %></td>
 
-	<tr><td class = 'show_bold'><%= f.label :paid, "Paid:", class: 'show_bold'%></td>
+	<tr><td class = 'show_bold'><%= f.label :paid, "Paid:", class: 'show_bold', id: 'countit' %></td>
 	<td class = 'show'><%= f.check_box :paid, {checked: @order.paid} %></td></tr>
 	</table><br>
 
