--- a/app/views/orders/search.html.erb
+++ b/app/views/orders/search.html.erb
@@ -1,7 +1,7 @@
 <h1>Find An Order</h1>
 
 <table>
-<%= form_tag("/results", :method => "post") do %>
+<%= form_tag("/index", :method => "post") do %>
   <tr><td class = "show_bold" style = "width: 30"><%= label_tag(:name, "Name:") %></td>
   <td class = "show"><%= text_field_tag(:name) %></td></tr>
   <tr><td class = "show_bold" style = "width: 30"><%= label_tag(:bunk, "Bunk:") %></td>
