--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -38,4 +38,4 @@
 <% end %>
 </table>
 <br />
-<%= button_to "New Order", new_order_path, :class => "button", :method => :get%>
+<%= button_to "New Order", new_order_path, :class => "btn btn-primary", :method => :get%>
