--- a/app/views/orders/search.html.erb
+++ b/app/views/orders/search.html.erb
@@ -14,7 +14,7 @@
   <%= check_box_tag(:needy) %><br>
 </div>
 
-  <%= submit_tag("Search") %>
+  <%= submit_tag("Search", {:class => "btn btn-primary"}) %>
 <% end %>
 
 
