--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'View Order') %>
-<p id="notice"><%= notice %></tr>
+<p id="notice"><%= notice %><p>
 
 <table>
 <tr class = 'show'>
